made some css changes, changed some bugs with the toast controller not showing up when its supposed to

--- a/src/app/collections/minis/mini-form/mini-form.component.scss
+++ b/src/app/collections/minis/mini-form/mini-form.component.scss
@@ -20,7 +20,7 @@ ion-label {
     outline-offset: -1px;
 }
 
-.item.sc-ion-label-md-h, .item .sc-ion-label-md-h {
+.label {
     color: rgb(56, 128, 255);
 }
 
