--- a/src/app/social/my-posts/my-posts.component.scss
+++ b/src/app/social/my-posts/my-posts.component.scss
@@ -3,3 +3,8 @@
     bottom: 12%;
     right: 5%;
 }
+
+img {
+    min-height: 170px;
+    object-fit: cover;
+}
